2005-04-05  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkvisual-win32.c (_gdk_visual_init): Don't force
	24bpp GdkVisual on 32bpp displays. (#140706)

Mon Apr  4 19:13:23 2005  Jonathan Blandford  <jrb@redhat.com>

	Fix for #172319, Tristan Van Berkom:

	* gtk/gtktreeview.c (gtk_tree_view_expand_all): change to use
	gtk_tree_view_real_expand_row() instead of doing this by hand.

Mon Apr  4 14:33:55 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_get_active_text):
	cast combo->priv->entry to GTK_ENTRY()

Mon Apr  4 12:14:35 2005  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_handle_scrolling): Translate x, y into
	widget coordinates instead of root coordinates. Patch from Jorn
	Baayen. (#172236)

2005-04-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_calculate_item_size): Take
	padding into account when calculating max_layout_width.  

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Use gtk_accel_map_change_entry(), so that reusing the same
	action name works.  (#170727, Paolo Borelli)

2005-04-04  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkmain.c (_gdk_win32_cf_to_string): New debugging
	function, to log a clipboard format name symbolically.
	(_gdk_win32_data_to_string): Also new, to log random data bytes.

	Merge from HEAD:
	
	* gdk/win32/gdkdisplay-win32.c (_win32_on_clipboard_change): Print
	debugging output only if asked for, not always.

	* gdk/win32/gdkmain-win32.c (_gdk_win32_key_to_string): New
	debugging function. As GetKeyNameText() returns a localized key
	name we need to convert it to UTF-8.

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkevents-win32.c: : Declare new functions, use them.

	Implement delayed rendering on Win32, specifically for transfering
	images through the clipboard from GTK+ apps to other
	apps (#168173, implementation by Ivan Wong):

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): 
	Handle WM_RENDERFORMAT.
